[package]
name = "pdblister"
version = "0.1.0"
authors = ["Gogs <gogs@fake.local>"]
edition = "2018"

[dependencies]
anyhow = "1.0.51"
futures = "0.3.18"
indicatif = { git = "https://github.com/mitsuhiko/indicatif.git", branch = "main", features = ["tokio"] }
pin-utils = "0.1.0"
rand = "0.8.4"
reqwest = "0.11.7"
thiserror = "1.0.30"
zerocopy = "0.6.1"
oauth2 = "4.1.0"
url = "2.2.2"
micro_http_server = "0.0.3"
base64 = "0.13.0"

[dependencies.tokio]
version = "1.14.0"
features = ["full"]
