[package]
name = "pdblister"
version = "0.1.0"
authors = ["Gogs <gogs@fake.local>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
futures = "0.3"
indicatif = { version = "0.17.1", features = ["tokio"] }
mime = "0.3"
pin-utils = "0.1"
rand = "0.8"
reqwest = "0.11"
thiserror = "1.0"
url = "2.2"
zerocopy = "0.6"

[dependencies.tokio]
version = "1.14.0"
features = ["full"]
